# chess

./: Cargo.toml  README.md  rustfmt.toml
chess_desktop/: Cargo.toml
chess_desktop/src/: main.rs
chess_engine/: Cargo.toml
chess_engine/src/: lib.rs  model.rs  test.rs
chess_web_api/: Cargo.toml
chess_web_api/src/: main.rs
chess_web_ui/: index.html  package-lock.json  package.json  vite.config.ts
chess_web_ui/src/: App.tsx  Board.css  Board.tsx  Home.tsx  Piece.css  Piece.tsx  env.ts  index.tsx  main.tsx
src/: engine.rs  main.rs  test.rs
