[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
raylib = { version = "3.7" }
profiling = "1.0.6"


[features]
default = ["profiling/profile-with-tracy"]
profile-with-tracy = ["profiling/profile-with-tracy"]