[package]
name = "chess_web_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess_engine = { path = "../chess_engine" }
axum = { version = "0.6.0-rc.1", features = ["ws", "headers"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["full"] }
tower-http = { version = "0.3.4", features = ["cors"] }
uuid = "1.1.2"
