[package]
name = "chess_web_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess_engine = { path = "../chess_engine" }
axum = { version = "0.6.0-rc.2", features = ["ws"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["full"] }
tower-http = { version = "0.3.4", features = ["cors"] }
uuid = {version= "1.1.2", features=["serde", "v4"]}
axum-macros = "0.3.0-rc.1"
